...
        android:background="@drawable/background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/term_details_category"></LinearLayout>

    <LinearLayout
        android:id="@+id/insideTerm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
...
        android:textColor="@color/black_2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutTerm"
        app:layout_constraintEnd_toEndOf="@+id/insideTerm"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/insideTerm"
        app:layout_constraintTop_toBottomOf="@+id/term_details_term"
        tools:text="category" />

    <TextView
        android:id="@+id/term_details_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
