...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ewc_logo" />

    <ImageButton
        android:id="@+id/glossary_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/rounded_corner"
...
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/videos_button"
        app:layout_constraintEnd_toEndOf="@+id/glossary_button"
        app:layout_constraintStart_toStartOf="@+id/glossary_button"
        app:layout_constraintTop_toBottomOf="@+id/glossary_button" />

    <ImageButton
        android:id="@+id/videos_button"
...
