<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_2"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:title="The EWC" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/videos_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:text="@string/videos_header"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/buttonForward"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_corner"
            android:src="@drawable/ic_arrow_down"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/buttonReverse"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_corner"
            android:src="@drawable/ic_arrow_up"
            app:tint="@color/white" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/videos_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="10dp"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
</FrameLayout>